--- a/index.html
+++ b/index.html
@@ -5,54 +5,66 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+      integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="
+      crossorigin="anonymous" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <div>
-        <a href="#">
-          <img src="./img/logo.svg" alt="logo" />
-        </a>
-      </div>
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Features</a></li>
-          <li><a href="#">Pricing</a></li>
-          <li><a href="#">Blog</a></li>
-        </ul>
-      </nav>
-      <div>
-        <button>Get Started</button>
+    <header class="header">
+      <div class="container">
+        <div>
+          <a href="#">
+            <img src="./img/logo.svg" alt="logo" />
+          </a>
+        </div>
+        <nav>
+          <ul>
+            <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
+          </ul>
+        </nav>
+        <div>
+          <button class="btn btn-orange">Get Started</button>
+        </div>
       </div>
     </header>
-    <section>
+    <section class="container about">
       <div>
-        <h1>Grow your subscription business</h1>
-        <p>
+        <h1 class="about-title">Grow your subscription business</h1>
+        <p class="about-text">
           Outcome-centered products that reduce churn, optimize pricing, and
           grow your subscription business end-to-end.
         </p>
         <div>
-          <button>Get Started</button>
-          <button>Try</button>
+          <button class="btn btn-violet">Get Started</button>
+          <button class="btn btn-transparent">Try</button>
         </div>
       </div>
       <div><img src="./img/firstmen.png" alt="firstmen" /></div>
     </section>
-    <footer>
-      <div>
-        <a href="#">
-          <img src="./img/logo.svg" alt="logo" />
-        </a>
+    <footer class="footer">
+      <div class="container">
+        <div>
+          <a href="#">
+            <img src="./img/logo.svg" alt="logo" />
+          </a>
+        </div>
+        <nav>
+          <ul>
+            <li class="nav-item"><a href="#" class="nav-link">Support</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Premium</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
+          </ul>
+        </nav>
       </div>
-      <nav>
-        <ul>
-          <li><a href="#">Support</a></li>
-          <li><a href="#">Premium</a></li>
-          <li><a href="#">Pricing</a></li>
-          <li><a href="#">Blog</a></li>
-        </ul>
-      </nav>
     </footer>
   </body>
 </html>
